--- a/pages/index.html
+++ b/pages/index.html
@@ -668,9 +668,9 @@
       </div>
     </div>
   </section>
-  <footer class="footer">
+  <footer class="footer footer__wrapper">
     <div class="footer__top">
-      <div class="footer__wrapper footer__top-content">
+      <div class="footer__top-content">
         <a class="footer__logo footer__logo-link" href="#">
           <div class="logo__square">
             <div class="logo__square-text">RE</div>
@@ -720,7 +720,7 @@
 
     </div>
     <div class="footer__bottom">
-      <div class="footer__wrapper footer__bottom-content">
+      <div class="footer__bottom-content">
         <div class="footer__copyright">
           <p class="footer__copyright-text">&#169; 2023 REDEXPERT.RU</p>
         </div>
