--- a/pages/index.html
+++ b/pages/index.html
@@ -429,14 +429,20 @@
             которые могут быть и при условиях жестких дедлайнов. Деятельность компании осуществляется в соответствии с
             законодательством РФ и уставом организации ООО «Рэд Эксперт». Эксперты в каждой своей работе всегда
             обеспечивают полноту, объективность и всесторонность исследования.</p>
+          <div class="btn section-about__btn">
+            <div class="btn__text"><a href="#" class="btn__link">Подробнее</a></div>
+          </div>
         </div>
       </div>
     </div>
   </section>
   <section class="section-benefits section">
     <div class="section__wrapper">
+      <div class="section-benefits__title title">
+        <h2 class="section-benefits__title-text">Почему стоит выбрать нас</h2>
+      </div>
       <div class="section-benefits__cards">
-        <div class="card card_theme-red">
+        <div class="card">
           <div class="card__icon">
             <img src="../src/icons/benefits/icon-cool.png" alt="Cool" class="card__icon-img">
           </div>
@@ -457,7 +463,7 @@
           </div>
         </div>
         <!--Преимущества-->
-        <div class="card card_theme-bordo">
+        <div class="card">
           <div class="card__icon">
             <img src="../src/icons/benefits/icon-house.png" alt="House" class="card__icon-img">
           </div>
@@ -476,7 +482,7 @@
           </div>
         </div>
         <!--Принципы-->
-        <div class="card card_theme-dark">
+        <div class="card">
           <div class="card__icon">
             <img src="../src/icons/benefits/icon-man.png" alt="Man" class="card__icon-img">
           </div>
@@ -675,7 +681,7 @@
           <div class="logo__square">
             <div class="logo__square-text">RE</div>
           </div>
-          <div class="logo__text">RED EXPERT</div>
+          <div class="footer__logo-text">RED EXPERT</div>
         </a>
         <div class="footer__info">
           <ul class="footer__info-list">
@@ -693,7 +699,7 @@
               <a href="#" class="footer__menu-link">Главная</a>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">Экспертизы</a>
+              <a href="page-2-1.html" class="footer__menu-link">Экспертизы</a>
             </li>
             <li class="footer__menu-item">
               <a href="#" class="footer__menu-link">Рецензирование</a>
