--- a/pages/index.html
+++ b/pages/index.html
@@ -405,6 +405,34 @@
       </div>
     </div>
   </div>
+  <section class="section-services section">
+    <div class="section__wrapper">
+      <div class="section-services__title title">
+        <h2 class="section-services__title-text">Наши услуги</h2>
+      </div>
+      <div class="section-services__tags">
+        <div class="section-services__tag section-services__tag_active" data-order="0">Экспертиза</div>
+        <div class="section-services__tag section-services__tag_disabled" data-order="1">Оценка</div>
+        <div class="section-services__tag section-services__tag_disabled" data-order="2">Рецензирование</div>
+      </div>
+      <div class="section-services__cards">
+        <div class="section-services__card">
+          <div class="section-services__card-content">
+            <div class="section-services__card-media">
+              <img src="../src/icons/services/chem.png" alt="Icon" class="section-services__card-img">
+            </div>
+            <div class="section-services__card-info">
+              <h3 class="section-services__card-title">Химическая экспертиза</h3>
+              <p class="section-services__card-description">Комплексное исследование, в результате которого определяются
+                химический состав, физико-химические показатели, органолептические, микробиологические свойства, внешний
+                вид, выявление несоответствий показателей согласно технической документации.</p>
+            </div>
+          </div>
+          <a href="#" class="section-services__card-link">Подробнее</a>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="section-about section">
     <div class="section__wrapper">
       <div class="section-about__title title">
