--- a/pages/index.html
+++ b/pages/index.html
@@ -702,6 +702,27 @@
       </div>
     </div>
   </section>
+  <section class="section-support section">
+    <div class="section__wrapper section-support__wrapper">
+      <div class="section-support__title title">
+        <h2 class="section-support__title-text">Остались вопросы? Напишите нам</h2>
+      </div>
+      <div class="section-support__form">
+        <h3 class="section-support__form-title">Оставьте заявку на консультацию</h3>
+        <p class="section-support__form-text">
+          Наши специалисты свяжутся <br> с Вами в ближайшее время
+        </p>
+        <form action="send.php" method="post" class="section-support__form-content">
+          <input type="text" name="name" placeholder="Имя" id="name" required>
+          <input type="email" name="email" placeholder="E-mail" id="email" required>
+          <input type="text" name="cellphone" placeholder="Телефон" id="cellphone" required>
+          <textarea name="question" id="question" cols="30" rows="10"
+            placeholder="Опишите кратко суть вопроса"></textarea>
+          <input type="submit" id="submit" value="Отправить">
+        </form>
+      </div>
+    </div>
+  </section>
   <footer class="footer footer__wrapper">
     <div class="footer__top">
       <div class="footer__top-content">
