--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -16,7 +16,7 @@
   <div class="header">
     <div class="header__wrapper">
       <div class="header__top">
-        <a class="logo logo__link" href="#">
+        <a class="logo logo__link header__logo" href="index.html">
           <div class="logo__square">
             <div class="logo__square-text">RE</div>
           </div>
@@ -35,15 +35,28 @@
       </div>
       <div class="header__bottom">
         <div class="service-menu">
-          <ul class="service-menu__list">
+          <div class="burger-menu inactive">
+            <div class="burger-menu__line"></div>
+            <div class="burger-menu__line"></div>
+            <div class="burger-menu__line"></div>
+          </div>
+          <div class="cross inactive">
+            x
+          </div>
+          <ul class="service-menu__list" id="serviceMenuList">
             <li class="service-menu__item">
               <a href="index.html" class="service-menu__link">Главная</a>
             </li>
             <li class="service-menu__item service-menu__sublist">
-              <a href="#" class="service-menu__link">Экспертиза</a>
+              <div class="service-menu__wrapper">
+                <a href="#" class="service-menu__link">Экспертиза</a>
+                <div class="arrow inactive">
+                  <img src="../src/icons/arrow.svg" alt="Arrow" class="arrow__img">
+                </div>
+              </div>
               <ul class="service-menu__submenu scroll-body">
                 <li class="service-menu__subitem">
-                  <a href="#" class="service-menu__sublink">Химическая экспертиза</a>
+                  <a href="page-2-1.html" class="service-menu__sublink">Химическая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
                   <a href="page-2-2.html" class="service-menu__sublink">Товароведческая экспертиза</a>
@@ -172,7 +185,12 @@
               </ul>
             </li>
             <li class="service-menu__item service-menu__sublist">
-              <a href="#" class="service-menu__link">Оценка</a>
+              <div class="service-menu__wrapper">
+                <a href="#" class="service-menu__link">Оценка</a>
+                <div class="arrow inactive">
+                  <img src="../src/icons/arrow.svg" alt="Arrow" class="arrow__img">
+                </div>
+              </div>
               <ul class="service-menu__submenu scroll-body">
                 <li class="service-menu__subitem disabled disabled">
                   <a href="page-3-1.html" class="service-menu__sublink service-menu__sublink_disabled">Оценка объектов
@@ -214,7 +232,12 @@
               </ul>
             </li>
             <li class="service-menu__item service-menu__sublist">
-              <a href="#" class="service-menu__link">Рецензирование</a>
+              <div class="service-menu__wrapper">
+                <a href="#" class="service-menu__link">Рецензирование</a>
+                <div class="arrow inactive">
+                  <img src="../src/icons/arrow.svg" alt="Arrow" class="arrow__img">
+                </div>
+              </div>
               <ul class="service-menu__submenu scroll-body">
                 <li class="service-menu__subitem disabled">
                   <a href="page-4-1.html" class="service-menu__sublink service-menu__sublink_disabled">Рецензия на
@@ -567,14 +590,14 @@
       </main>
     </div>
   </section>
-  <footer class="footer">
+  <footer class="footer footer__wrapper">
     <div class="footer__top">
-      <div class="footer__wrapper footer__top-content">
-        <a class="footer__logo footer__logo-link" href="#">
+      <div class="footer__top-content">
+        <a class="footer__logo footer__logo-link" href="index.html">
           <div class="logo__square">
             <div class="logo__square-text">RE</div>
           </div>
-          <div class="logo__text">RED EXPERT</div>
+          <div class="footer__logo-text">RED EXPERT</div>
         </a>
         <div class="footer__info">
           <ul class="footer__info-list">
@@ -592,7 +615,7 @@
               <a href="#" class="footer__menu-link">Главная</a>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">Экспертизы</a>
+              <a href="page-2-1.html" class="footer__menu-link">Экспертизы</a>
             </li>
             <li class="footer__menu-item">
               <a href="#" class="footer__menu-link">Рецензирование</a>
@@ -619,7 +642,7 @@
 
     </div>
     <div class="footer__bottom">
-      <div class="footer__wrapper footer__bottom-content">
+      <div class="footer__bottom-content">
         <div class="footer__copyright">
           <p class="footer__copyright-text">&#169; 2023 REDEXPERT.RU</p>
         </div>
@@ -637,6 +660,7 @@
 
     </div>
   </footer>
+  <script src="../scripts/index.js" type="module"></script>
 </body>
 
 </html>
