--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
   <div class="header">
     <div class="header__wrapper">
       <div class="header__top">
-        <a class="logo logo__link header__logo" href="#">
+        <a class="logo logo__link header__logo" href="index.html">
           <div class="logo__square">
             <div class="logo__square-text">RE</div>
           </div>
@@ -712,11 +712,11 @@
         <p class="section-support__form-text">
           Наши специалисты свяжутся <br> с Вами в ближайшее время
         </p>
-        <form action="send.php" method="post" class="section-support__form-content">
-          <input type="text" name="name" placeholder="Имя" id="name" required>
-          <input type="email" name="email" placeholder="E-mail" id="email" required>
-          <input type="text" name="cellphone" placeholder="Телефон" id="cellphone" required>
-          <textarea name="question" id="question" cols="30" rows="10"
+        <form method="post" class="section-support__form-content" id="contact-form">
+          <input type="text" name="user_name" placeholder="Имя" id="name" required>
+          <input type="email" name="user_email" placeholder="E-mail" id="email" required>
+          <input type="text" name="user_phone" placeholder="Телефон" id="cellphone" required>
+          <textarea name="message" id="question" cols="30" rows="10"
             placeholder="Опишите кратко суть вопроса"></textarea>
           <input type="submit" id="submit" value="Отправить">
         </form>
@@ -726,7 +726,7 @@
   <footer class="footer footer__wrapper">
     <div class="footer__top">
       <div class="footer__top-content">
-        <a class="footer__logo footer__logo-link" href="#">
+        <a class="footer__logo footer__logo-link" href="index.html">
           <div class="logo__square">
             <div class="logo__square-text">RE</div>
           </div>
@@ -767,7 +767,7 @@
               <a href="#" class="footer__menu-link">Вопросы</a>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">Контакты</a>
+              <a href="contacts.html" class="footer__menu-link">Контакты</a>
             </li>
           </ul>
         </div>
@@ -793,7 +793,15 @@
 
     </div>
   </footer>
-  <script src="../scripts/index.js" type="module"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init({
+        publicKey: "VKn7b-BqC_0Ve_1oo",
+      });
+    })();
+  </script>
+  <script src="../scripts/main.js" type="module"></script>
 </body>
 
 </html>
