--- a/pages/index.html
+++ b/pages/index.html
@@ -406,7 +406,7 @@
     </div>
   </div>
   <section class="section-services section">
-    <div class="section__wrapper">
+    <div class="section__wrapper section-services__wrapper">
       <div class="section-services__title title">
         <h2 class="section-services__title-text">Наши услуги</h2>
       </div>
