--- a/pages/index.html
+++ b/pages/index.html
@@ -500,11 +500,10 @@
           <div class="card__info">
             <ul class="card__info-list">
               <li class="card__info-item">Гибкость в работе и взаимодействии</li>
-              <li class="card__info-item">Быстрые сроки исполнения работ <span class="card__info-item_strong">(от 1
-                  дня)</span>
+              <li class="card__info-item">Быстрые сроки исполнения работ <span class="card__info-item_strong">(от 2
+                  дней)</span>
               </li>
-              <li class="card__info-item">Приемлемые цены <span class="card__info-item_strong">(от 4990 руб.)</span>
-              </li>
+              <li class="card__info-item">Приемлемые цены</li>
               <li class="card__info-item">Скидка при повторном обращении 5%</li>
               <li class="card__info-item">Скидка при обращении по рекомедации</li>
               <li class="card__info-item">Прямой контакт с химической лабораторией и специалистами</li>
