--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -153,7 +153,7 @@
                     class="service-menu__sublink service-menu__sublink_disabled">Пожарно-техническая экспертиза</a>
                 </li>
                 <li class="service-menu__subitem">
-                  <a href="#" class="service-menu__sublink">Портретная экспертиза</a>
+                  <a href="page-2-29.html" class="service-menu__sublink">Портретная экспертиза</a>
                 </li>
                 <li class="service-menu__subitem disabled">
                   <a href="page-2-30.html"
@@ -397,8 +397,8 @@
   </div>
   <section class="section-exptitle section">
     <div class="section__wrapper">
-      <div class="section-exptitle__title title-bg-portrait">
-        <h1 class="section-exptitle__title-text">Портретная экспертиза</h1>
+      <div class="section-exptitle__title title-bg-about">
+        <h1 class="section-exptitle__title-text">О компании</h1>
       </div>
     </div>
   </section>
@@ -407,47 +407,30 @@
       <main class="main">
         <div class="main__wrapper">
           <p class="main__text">
-            <span class="main__text_bold">Портретная экспертиза</span> – это экспертиза, направленная на идентификацию
-            лица или установление его отдельных характеристик (пол, возраст и т.д.) по внешности, запечатленной на
-            фотографии или на видеозаписи.
+            <span class="main__text_bold">ООО «Рэд Эксперт»</span> - это компания, которая специализируется на
+            проведении экспертиз, оценки и рецензирования различных видов. Мы предлагаем широкий спектр услуг для оценки
+            качества и безопасности продукции, зданий,
+            оборудования, а также проведения экспертизы в области права, финансов и многих других сфер. Наша команда
+            состоит из высококвалифицированных специалистов, которые имеют богатый опыт и знания в своей области.<br>
+            Мы используем современное оборудование и методики, что позволяет нам проводить качественные экспертизы и
+            предоставлять клиентам достоверные результаты.<br>
+            Основными принципами работы нашей компании являются профессионализм, надежность и ответственность перед
+            заказчиками. Мы всегда стремимся к совершенствованию и развитию, чтобы удовлетворить потребности наших
+            клиентов на самом высоком уровне.<br>
+            Если вам требуется провести экспертизу, обращайтесь в ООО «Рэд Эксперт» – мы гарантируем качественное и
+            профессиональное обслуживание!
+
           </p>
-          <p class="main__text">
-            <span class="main__text_bold">Необходимость</span> данной экспертизы заключается в возможности определения
-            диагностики и отождествления личности по портретным изображениям. В рамках портретной экспертизы
-            устанавливается личность по признакам внешности, зафиксированным на различных объективных отображениях и
-            выполняемая с помощью специализированных методов исследования.
-          </p>
-          <p class="main__text">
-            <span class="main__text_bold">Объекты портретной экспертизы:</span>
-          </p>
-          <p class="main__text">
-          <ul class="main__list">
-            <li class="main__list-item"><span class="main__text_bold">Фотографии и видеозаписи</span></li>
-            <li class="main__list-item"><span class="main__text_bold">Рентгеновские снимки</span></li>
-            <li class="main__list-item"><span class="main__text_bold">Костные останки</span></li>
-            <li class="main__list-item"><span class="main__text_bold">Посмертные маски</span></li>
-            <li class="main__list-item"><span class="main__text_bold">Художественные произведения</span> (портреты,
-              гравюры, предметы резьбы и т.д.)</li>
-          </ul>
-          </p>
-          <p class="main__text">
-            <span class="main__text_bold">Какие вопросы решает данная экспертиза:</span>
-          </p>
+
+
+
           <p class="main__text">
           <ul class="main__list">
-            <li class="main__list-item">Одно или разные лица изображены на фотографиях (видеозаписях) неизвестного лица
-              и фотографиях (видеоматериалах), представленных для сравнения?</li>
-            <li class="main__list-item">Одно или разные лица изображены на фотоснимке и рентгеноснимке?</li>
-            <li class="main__list-item">Одному или разным людям принадлежат части головы, лица, тела, изображенные на
-              представленных фотоснимках (рентгеноснимках)?</li>
-            <li class="main__list-item">Принадлежит ли череп, представленный на исследование, лицу, изображенному на
-              фотоснимках (видеозаписях, рентгеноснимках)?</li>
-            <li class="main__list-item">Одно и то же или разные лица изображены на нескольких фотографиях неизвестных
-              лиц?</li>
-            <li class="main__list-item">Каков пол, примерный возраст, антропологический тип запечатленного на фотографии
-              (видеозаписи) лица?</li>
+            <li class="main__list-item"><span class="main__text_bold">Контактный телефон: </span><a
+                href="tel:+79257359797">+7(925) 735-97-97</a></li>
+            <li class="main__list-item"><span class="main__text_bold">Электронная почта: </span><a
+                href="mailto:red.exp@yandex.ru">red.exp@yandex.ru</a></li>
           </ul>
-          </p>
         </div>
       </main>
       <aside class="aside">
@@ -547,7 +530,7 @@
                 экспертиза</a>
             </li>
             <li class="aside__list-item">
-              <a href="page-2-29.html" class="aside__list-link active">Портретная экспертиза</a>
+              <a href="page-2-29.html" class="aside__list-link">Портретная экспертиза</a>
             </li>
             <li class="aside__list-item disabled">
               <a href="page-2-30.html" class="aside__list-link aside__list-link_disabled">Авиационно-техническая
