--- a/pages/index.html
+++ b/pages/index.html
@@ -480,7 +480,7 @@
             законодательством РФ и уставом организации ООО «Рэд Эксперт». Эксперты в каждой своей работе всегда
             обеспечивают полноту, объективность и всесторонность исследования.</p>
           <div class="btn section-about__btn">
-            <div class="btn__text"><a href="#" class="btn__link">Подробнее</a></div>
+            <div class="btn__text"><a href="about-us.html" class="btn__link">Подробнее</a></div>
           </div>
         </div>
       </div>
@@ -788,7 +788,7 @@
         <div class="footer__menu">
           <ul class="footer__menu-list">
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">О компании</a>
+              <a href="about-us.html" class="footer__menu-link">О компании</a>
             </li>
             <li class="footer__menu-item">
               <a href="#" class="footer__menu-link">Вопросы</a>
