--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -388,7 +388,7 @@
               <a href="#" class="service-menu__link">Вопросы</a>
             </li>
             <li class="service-menu__item">
-              <a href="#" class="service-menu__link">Контакты</a>
+              <a href="contacts.html" class="service-menu__link">Контакты</a>
             </li>
           </ul>
         </div>
@@ -409,183 +409,16 @@
           <p class="main__text">
             <span class="main__text_bold">Генеральный директор</span> – Орлова Анастасия Игоревна
           </p>
-
           <p class="main__text">
             <span class="main__text_bold">Контакты:</span>
           </p>
           <p class="main__text">
           <ul class="main__list">
-            <li class="main__list-item"><span class="main__text_bold">Вода:</span> водопроводная, бутилированная, после
-              фильтрации, скважины и колодца, сточные воды, бассейны, родники.</li>
-            <li class="main__list-item">
-              <span class="main__text_bold">Черные, цветные и драгоценные металлы, сплавы:</span> сталь, прокат, трубы,
-              фитинги, прутки, болтовые соединения, сепараторы, металлорукав, холодное оружие, автомобильные запчасти,
-              провода, кабели, рельсы, электроника, ювелирные изделия, светильники, посуда, мебель, элементы одежда,
-              трубы, металлоконструкции, арматура, взрывотехнические элементы, стоматологические коронки, протезы,
-              серебро, золото, платина.
-            </li>
-            <li class="main__list-item">
-              <span class="main__text_bold">Полимерные материалы:</span> пластмассы, резина, ленты, пакеты, коврики,
-              пленки, шнуры, жгуты, изоляционные материалы, шины, покрышки, подшипники, щетки дворников, детали
-              телевизоров, радиоприборов и различной аппаратуры, изоленты, пуговицы, пряжки, клей, мастика, пластилин,
-              обои, плитка, смазки, лаки, краски, гели, пленки, волокна, эластомеры, поролон, силикон, поликарбонат,
-              полиуретан, фенолформальдегидная смола, фенол, винилхлорид, стирол, каучук, оргстекло, оптические стекла,
-              крахмал, целлюлоза, полиэтиленгликоль,
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Стекло:</span> флоат-стекло, узорчатое, матовое,
-              солнцезащитное, низкоэмиссионное, антибликовое, небьющееся, противопожарное, закаленное, многослойное,
-              травленое, оптическое, прозрачное, цветное, фотохромное, термохромное, атермальное, электрохромное,
-              пористое, пеностекло, хрустальное, жаростойкое, боросиликатное, лабораторное, закаленное.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">ЛКМ (лакокрасочные материалы):</span> жидкие,
-              сыпучие, отслоившиеся, в жидком или твердом виде, краска, эмаль, лак, грунтовка, шпатлевка, антисептик,
-              алкидноуретановые, полиуретановые, глифталевые, фенолоалкидные, кремнийорганические, фенольные,
-              меламиновые, циклогексаноновые, карбамидные, эпоксидные, полиэфирные насыщенные, этрифталевые,
-              пентафталевые, эпоксиэфирные, полиэфирные ненасыщенные, полиакрилатные, алкидно-акриловые, масляно- и
-              алкидностирольные, поливинилацетатные, нефтеполимерные, поливинилацетальные, фторопластовые, на основе
-              сополимеров винилацетата, перхлорвиниловые, каучуковые, на основе сополимеров винилхлорида, битумные,
-              шеллачные, канифольные, янтарные, масляные, ацетобутиратоцеллюлозные, нитроцеллюлозные, ацетилцеллюлозные,
-              этилцеллюлозные.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Нефтепродукты и горючесмазочные материалы (НП и
-                ГСМ):</span> бензин, дизельное топливо, темное и светлое печное топливо, мазут, керосин, лигроин,
-              газолин, моторное, трансмиссионное, гидравлическое, редукторное, пищевое масла, пластичные смазки,
-              специальные жидкости (тормозные и охлаждающие), промышленные масла (текстильные, для прокатных станов,
-              закалочные, электроизоляционные, теплоносители), элетропроводящие, пластичные смазки.
-              Данную группу веществ можно оценить по следующим показателям: плотность, вязкость кинематическая и
-              динамическая, индекс вязкости, температура вспышки в открытом и закрытом тигле, щелочное число, зольность,
-              массовая (объёмная) доля воды (метод Дина Старка), массовая доля механических примесей, температура
-              текучести и застывания, наличие водорастворимых кислот и щелочей (рН), массовая доля серы, коксуемость
-              методом Конрадсона, время деэмульсации, кислотное число, цвет в ед. ЦНТ, испытания на медной пластинке,
-              пятна износа при заданной (нормируемой) нагрузке, критическая нагрузка, массовая доля фосфора,
-              прозрачность, ИК – спектрометрия (определение идентичности «свежего» и работавшего масел, определение
-              наличия в масле топлива, охлаждающей жидкости, степени окисления масла), степень чистоты, класс чистоты,
-              характеристики вспенивания, температура самовоспламенения, напряжение пробоя, массовая доля воды методом
-              Карла Фишера, тангенс угла диэлектрических потерь, наличие селективных растворителей: фенола, крезола и
-              фурфурола, показатель преломления, потери от испарения методом Ноак, стабильность против окисления
-              (летучие низкомолекулярные кислоты, осадок, кислотное число), стабильность по индукционному периоду
-              осадкообразования (массовая доля осадка), определение антикоррозионных свойств, коррозионность.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Спиртсодержащие жидкости:</span> метиловый,
-              этиловый, изопропиловый и др. спирты, глицерин, этилен-гликоль; незамерзающие жидкости; антифриз; тосол;
-              присадки; алкогольная продукция; парфюмерная продукция: духи, парфюмерная и туалетная вода.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Напитки:</span> пиво, пивной напиток, вино,
-              коньяк, ром, водка, шампанское, самогон, джин, дистиллят, ликер, сусло, вермут, энергетические напитки,
-              кофе, чай, сок, сироп, квас.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Косметическая продукция (твердое и жидкое,
-                туалетное и хозяйственное мыло, масло парфюмерное, зубной порошок, шампуни, гели для душа, крем
-                косметический, декоративная косметика, продукция для бритья, скраб для тела, лосьоны и др.):</span>
-              выявление фальсификации, идентификация состава, определение соответствия ГОСТ 32117-2013, ГОСТ 790-89,
-              ГОСТ 4225-76, ГОСТ 29188.2-91, ГОСТ 31460-2012, ГОСТ 31649-2012 и др.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Продукты пчеловодства:</span> выявление подделок,
-              засахаривания, выявление причин расслоения меда.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Пищевая продукция (молоко, йогурт, кефир, майонез,
-                кетчуп, яйца, полуфабрикаты, растительное масло, шоколад и др.):</span> подтверждение соответствия
-              продукции требованиям, предъявляемым Техническими регламентами (ФЗ), СанПиН, ГОСТ, ТУ и другой нормативной
-              документацией; выявление фальсифицированной пищевой продукции (установление подлинности и натуральности
-              пищевых продуктов); выявление контрафактной пищевой продукции (подтверждение идентичности поставляемой
-              продукции образцу-эталону производителя); подтверждение соответствия состава продукции информации,
-              заявленной на этикетке, оценка качества и безопасности продукции, поставляемой в торговые сети.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Продукция горнодобывающих производств:</span>
-              камень, песок, глина, мрамор, гранит, ангидрит, известняк, гипс, мел, доломит, сланцы, гравий, щебень,
-              галька, Фосфаты и алюмофосфаты кальция, шпат, апатит, торф, соль, хлорид натрия, асбест, слюда, тальк.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Продукция коксовых печей:</span> кокс и полукокс
-              из каменного угля, лигнита и торфа, смолы, пеки, деготь каменноугольные коксохимического производств.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Ткани:</span> хлопчатобумажные, ворсовые,
-              махровые, брезент, бязь.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Деревянные изделия:</span> фанера, панели, ДСП
-              (древесно-стружечная плита), листы для облицовки, шпон для фанеры, древесина прессованная, МДФ
-              (мелко-дисперсная фракция), предметы интерьера, паркет, плинтуса, ламинат, оконные рамы, сэндвич-панели,
-              массивная древесина.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Бумажные изделия:</span> бумага, целлюлоза,
-              картон, обои, копировальная бумага, пергамент, одноразовая посуда, конверты, тетради, блокноты, фибра.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Красители:</span> винилсульфоновые,
-              хлортриазиновые, антрахиноновые, полиэфирные, триарилметановые, красители органические кубогенные на
-              основе диангидрида динафтилгексакарбоновой кислоты и др.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Удобрения:</span> животного или растительного
-              происхождения, смешанные или несмешанные, химически обработанные или необработанные, мочевина, сульфат
-              аммония, двойные соли и смеси сульфата, аммония и нитрата аммония, смеси нитрата аммония с карбонатом
-              кальция или прочими неорганическими веществами, не являющимися удобрениями, удобрения минеральные или
-              химические, фосфорные (суперфосфаты), калийные, содержащие два или три питательных элемента: азот, фосфор
-              и калий, содержащие три питательных элемента: азот, фосфор и калий, фосфат диаммония, фосфат моноаммония и
-              его смеси с фосфатом диаммония, содержащие два питательных элемента: азот и фосфор, содержащие два
-              питательных элемента: фосфор и калий.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">ПАВ (поверхностно-активные вещества):</span>
-              этоксилаты, пропоксилаты, бутоксилаты, алкилгликозиды, карбоксиэтоксилаты, фосфаты и полифосфаты,
-              сульфосукцинаты, алкилсульфаты, алкилэфиросульфаты.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Взрывчатые вещества (шнуры огнепроводные и
-                детонирующие, детонаторы, запалы, электродетонаторы, пиропатроны, фейерверки, порох, твердое топливо,
-                ):</span> аминодинитробензофуроксан, цис-бис(5-тетранитразолато) тетраамин-кобальт (III) перхлорат,
-              диаминодинитробензофуроксан, гексанитрогексаазаизовюрцитан, диаминотринитробензол, динитрогликольурил,
-              фуразаны, октоген, гексанитроадамантан, гексанитростильбен, имидазолы,
-              1-(2-нитротриазоло)-2-динитрометиленгидразин, 3-нитро-1,2,4-триазол-5-он, гексоген,
-              триаминогуанидиннитрат, триаминотринитробензол, тетразолы, тринитрофенилметилнитрамин и др.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold"></span>Стекло: листовое, гнутое, обработанное,
-              полое, стекловолокно, полуобработанное, техническое, содово-известковое стекло (1Na<sub>2</sub>O : 1CaO :
-              6SiO<sub>2</sub>),
-              калийно-известковое стекло (1K<sub>2</sub>O : 1CaO : 6SiO<sub>2</sub>), калийно-свинцовое стекло
-              (1K<sub>2</sub>O : 1PbO : 6SiO<sub>2</sub>).
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Огнеупорные изделия:</span> плиты, плитки
-              керамические, кирпичи, черепица, керамика, бетон, войлок, огнеупорный картон.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Табачные изделия:</span> сигареты, сигары,
-              папиросы, биди, кретек, табак курительный, нюхательный и др.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Одежда:</span> из меха, кожи и др.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Лекарственные препараты:</span> лизин, кислота
-              глутаминовая и их соли, соли четвертичные и гидроксиды аммония, фосфоаминолипиды, амиды и др.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Электрическое оборудование:</span>
-              электродвигатели, генераторы, трансформаторы, катушка индуктивности, предохранители, разрядники, реле,
-              батареи, аккумуляторы, кабели, провода, сепараторы и др.
-            </li>
-            <li class="main__list-item"><span class="main__text_bold">Мебель:</span> шкаф, стол, стул, стеллаж, матрас,
-              стойка, кровать, тумба, гарнитур, манеж и др.
-            </li>
+            <li class="main__list-item"><span class="main__text_bold">Контактный телефон: </span><a
+                href="tel:+79257359797">+7(925) 735-97-97</a></li>
+            <li class="main__list-item"><span class="main__text_bold">Электронная почта: </span><a
+                href="mailto:red.exp@yandex.ru">red.exp@yandex.ru</a></li>
           </ul>
-          </p>
-          <p class="main__text">
-            <span class="main__text_bold">Какие вопросы решает данная экспертиза:</span>
-          </p>
-          <p class="main__text">
-          <ul class="main__list">
-            <li class="main__list-item">Соответствует ли представленный образец алкогольной продукции?</li>
-            <li class="main__list-item">Какой вид пластмассы предоставлен на исследование?</li>
-            <li class="main__list-item">Какое количество этилового спирта в образце?</li>
-            <li class="main__list-item">Является ли предоставленная на исследование жидкость спиртосодержащей?</li>
-            <li class="main__list-item">Какое значение рН (водородного показателя) жидкости?</li>
-            <li class="main__list-item">Каков состав предоставленного образца на исследование?</li>
-            <li class="main__list-item">Какой вид нефтепродукта предоставлен на исследование? </li>
-            <li class="main__list-item">Является ли предоставленная на исследование жидкость нефтепродуктом?</li>
-            <li class="main__list-item">Является ли образец косметической продукции контрафактной?</li>
-            <li class="main__list-item">Какой вид стекла предоставлен на исследование? </li>
-            <li class="main__list-item">Какое количество глицерина содержится в жидкости?</li>
-            <li class="main__list-item">Соответствует ли предоставленная на исследование жидкость марке бензина АИ-98?
-            </li>
-            <li class="main__list-item">Какое октановое число имеет предоставленный на исследование бензин?</li>
-            <li class="main__list-item">Какой фракционный состав имеет образец дизельного топлива?</li>
-            <li class="main__list-item">Какой фракционный состав имеет образец дизельного топлива?</li>
-            <li class="main__list-item">Является ли предоставленный на исследование мед натуральным?</li>
-            <li class="main__list-item">Какой элементный состав образца металлической детали?</li>
-            <li class="main__list-item">Какое количество железа содержится в металлическом изделии?</li>
-          </ul>
-          </p>
         </div>
       </main>
     </div>
@@ -628,13 +461,13 @@
         <div class="footer__menu">
           <ul class="footer__menu-list">
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">О компании</a>
+              <a href="about-us.html" class="footer__menu-link">О компании</a>
             </li>
             <li class="footer__menu-item">
               <a href="#" class="footer__menu-link">Вопросы</a>
             </li>
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">Контакты</a>
+              <a href="contacts.html" class="footer__menu-link">Контакты</a>
             </li>
           </ul>
         </div>
