--- a/pages/page-2-36.html
+++ b/pages/page-2-36.html
@@ -621,7 +621,7 @@
         <div class="footer__menu">
           <ul class="footer__menu-list">
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">О компании</a>
+              <a href="about-us.html" class="footer__menu-link">О компании</a>
             </li>
             <li class="footer__menu-item">
               <a href="#" class="footer__menu-link">Вопросы</a>
