--- a/pages/page-2-7.html
+++ b/pages/page-2-7.html
@@ -608,7 +608,7 @@
         <div class="footer__menu">
           <ul class="footer__menu-list">
             <li class="footer__menu-item">
-              <a href="#" class="footer__menu-link">Главная</a>
+              <a href="index.html" class="footer__menu-link">Главная</a>
             </li>
             <li class="footer__menu-item">
               <a href="page-2-1.html" class="footer__menu-link">Экспертизы</a>
@@ -640,7 +640,7 @@
     <div class="footer__bottom">
       <div class="footer__bottom-content">
         <div class="footer__copyright">
-          <p class="footer__copyright-text">&#169; 2023 REDEXPERT.RU</p>
+          <p class="footer__copyright-text">&#169; 2024 REDEXPERT.RU</p>
         </div>
         <div class="social-media">
           <div class="social-media__body">
