--- a/pages/page-2-12.html
+++ b/pages/page-2-12.html
@@ -5,18 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <title>ChemTech Expert</title>
+  <title>RED Expert</title>
 </head>
 
 <body>
   <div class="header">
     <div class="header__wrapper">
       <div class="header__top">
-        <a class="logo logo__link header__logo" href="index.html">
+        <a class="logo logo__link header__logo" href="../index.html">
           <div class="logo__square">
             <div class="logo__square-text">RE</div>
           </div>
@@ -45,7 +45,7 @@
           </div>
           <ul class="service-menu__list" id="serviceMenuList">
             <li class="service-menu__item">
-              <a href="index.html" class="service-menu__link">Главная</a>
+              <a href="../index.html" class="service-menu__link">Главная</a>
             </li>
             <li class="service-menu__item service-menu__sublist">
               <div class="service-menu__wrapper">
@@ -600,7 +600,7 @@
   <footer class="footer footer__wrapper">
     <div class="footer__top">
       <div class="footer__top-content">
-        <a class="footer__logo footer__logo-link" href="index.html">
+        <a class="footer__logo footer__logo-link" href="../index.html">
           <div class="logo__square">
             <div class="logo__square-text">RE</div>
           </div>
@@ -619,7 +619,7 @@
         <div class="footer__menu">
           <ul class="footer__menu-list">
             <li class="footer__menu-item">
-              <a href="index.html" class="footer__menu-link">Главная</a>
+              <a href="../index.html" class="footer__menu-link">Главная</a>
             </li>
             <li class="footer__menu-item">
               <a href="page-2-1.html" class="footer__menu-link">Экспертизы</a>
